--- a/src/components/app-section4/app-section.css
+++ b/src/components/app-section4/app-section.css
@@ -1,4 +1,5 @@
 .subscribe{
+    padding-top: 15px;
     width: 1090px;
     height: 240px;
     border-radius: 10px;
@@ -25,6 +26,7 @@
     color: #4f5665;
 }
 .subscribe-button{
+    margin-right: 10px;
     color: white;
     font-weight: 700;
     font-size: 15px;
