added new component and links 27/05/2022/

--- a/src/components/app-header/app-header.css
+++ b/src/components/app-header/app-header.css
@@ -67,3 +67,8 @@ span{
     box-sizing: border-box;
     border-radius: 50px;
 }
+.nav .active ul a li{
+    cursor: pointer;
+    color: red;
+    
+}
